# py-ssa-lib

./: .gitignore  .pypirc  README.md  requirements.txt  setup.cfg
.github/workflows/: main.yaml  main.yml  python-package.yml  python-publish.yml  test_workflow
examples_and_guide/: MSSA_guide.ipynb  SSA_guide.ipynb
examples_and_guide/.ipynb_checkpoints/: MSSA_guide-checkpoint.ipynb  SSA_guide-checkpoint.ipynb
py_ssa/: .coverage  .gitignore  LICENSE.txt  README.md  requirements.txt
py_ssa/src/py_ssa/: SSA.py
py_ssa/src/py_ssa.egg-info/: SOURCES.txt  top_level.txt
py_ssa/test/: test_MSSA.py  test_SSA.py
src/py_ssa.egg-info/: PKG-INFO
src/py_ssa/datasets/: load_energy_consumption_df.py
src/py_ssa_lib/: MSSA.py  SSA.py
src/py_ssa_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/py_ssa_lib/.ipynb_checkpoints/: MSSA-checkpoint.py  SSA-checkpoint.py
src/py_ssa_lib/datasets/: energy_consumption_df.csv  load_global_average_temperatures.py  total-primary-energy-consumption-csv-version-4.csv
src/py_ssa_lib/datasets/.ipynb_checkpoints/: load_energy_consumption_df-checkpoint.py  load_global_average_temperatures-checkpoint.py
src/py_ssa_lib/tools/: bootstrap_prediction_intervals.py
test/: test_MSSA.py  test_SSA.py
test/.ipynb_checkpoints/: test_MSSA-checkpoint.py
