[metadata]
name = py_ssa_lib
version = 1.0.1.1
url = https://github.com/K-Ibadullaev/py_ssa
author = Konstantin Ibadullaev
email= konstantin.ibadullaev.post@gmail.com
description = "This package implements MSSA and SSA in Python"
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_files = LICENSE.txt

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.10.0
install_requires=
    numpy>=2.0.0
    matplotlib>=3.9.0
    scipy>=1.14.0
    scikit-learn>=1.5.0
    pandas>=2.0.0

[options.packages.find]
where = src
exclude =
    test*

[tox:tox]
envlist = py310
isolated_build = True

[testenv]
deps =
    
    pytest
    pytest-cov
commands =
    python -m pip install numpy matplotlib scipy scikit-learn pandas
    pytest 
